--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@ body {
     background-image: url("img/milkyway.jpg");
     color:#ccc;
     font-size: 1.6rem
-    
 }
 
 .hero-bg {
@@ -34,18 +33,17 @@ body {
     flex-direction: column;
     width: 100%;
     height: 60rem;
-   
 }
 
 .info {
     margin-top: 1.7rem;
     text-align: center;
-    font-size: 3rem;
+    font-size: 2rem;
 }
 
 .info h1 {
     margin-bottom: 2.5rem;
-    font-size: 6rem;
+    font-size: 3rem;
 }
 
 .doctor-img {
@@ -57,9 +55,9 @@ body {
 
 .doctor-img img {
     position: absolute;
-    top: 3rem;
+    top: 1rem;
     padding: 1rem 1rem;
-    height: 24rem;
+    height: 25rem;
     cursor: pointer;
 }
 
@@ -68,17 +66,17 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    font-size: 2.4rem;
+    font-size: 2rem;
 }
 
 .mind-area .mind-title {
-    margin-top: 5rem;
+    margin-top: 1rem;
 }
 
 .mind-area .mind {
     max-width: 80%;
-    margin-top: 1.8rem;
-    font-size: 3rem;
+    margin-top: 2rem;
+    font-size: 2rem;
     font-weight: bold;
     color: #f6483b
 }
@@ -110,5 +108,41 @@ body {
 
     100% {
         transform: translateX(0px);
+    }
+}
+
+/* MEDIA */
+
+@media (min-width: 768px) {
+    .info {
+        font-size: 2.8rem;
+    }
+    .info h1 {
+        margin-bottom: 4rem;
+        font-size: 4rem;
+    }
+    .mind-area {
+        font-size: 2.6rem;
+    }
+    .mind-area .mind {
+        margin-top: 3rem;
+        font-size: 2.7rem;
+    }
+}
+
+@media (min-width: 1200px) {
+    .info {
+        font-size: 3rem;
+    }
+    .info h1 {
+        margin-bottom: 3rem;
+        font-size: 5.3rem;
+    }
+    .mind-area {
+        font-size: 2.7rem;
+    }
+    .mind-area .mind {
+        margin-top: 2.5rem;
+        font-size: 3.2rem;
     }
 }
